--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,10 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
 github_username:  ashwinm76
 
+# Pages that appear in the page header
+header_pages:
+  - about.md
+  
 # Build settings
 markdown: kramdown
 #theme: minima
