--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Ashwin's technology blog
+author: Ashwin Menon
 email: ashwin.menon@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   I write about technology that interests me.
@@ -21,14 +22,16 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
 github_username:  ashwinm76
+show_excerpts: true
 
 # Pages that appear in the page header
 header_pages:
   - about.md
-  
+  - blog.md
+
 # Build settings
 markdown: kramdown
-#theme: minima
+
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
